small bug fixes

--- a/src/main/resources/templates/createFish.html
+++ b/src/main/resources/templates/createFish.html
@@ -17,7 +17,7 @@
 <body>
 
 	<div class="container">
-		<div th:replace="fragments/pageHeader"></div>
+		<div th:replace="~{fragments/pageHeader}"></div>
 
 		<div class="row">
 			<div class="col-md-8 mx-auto rounded border p-4 m-4">
