--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,32 +3,7 @@
       xmlns="http://www.w3.org/1999/xhtml"
       xmlns:th="https://www.thymeleaf.org"
       xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Best fish</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-        rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
-        crossorigin="anonymous">
-  <style>
-    .image-container {
-      position: relative;
-      display: inline-block;
-    }
-
-    .image-container img {
-      transition: transform 0.3s ease;
-      width: 100px;
-    }
-
-    .image-container:hover img {
-      transform: scale(4);
-      z-index: 10;
-      position: relative;
-    }
-  </style>
-</head>
+<div th:replace="~{fragments/styles}"></div>
 <body>
 <div class="container">
   <div th:replace="~{fragments/pageHeader}"></div>
@@ -76,8 +51,7 @@
   </table>
 </div>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-        crossorigin="anonymous"></script>
+<div th:replace="~{fragments/scripts}"></div>
+
 </body>
 </html>
