--- a/src/main/resources/templates/fragments/pageHeader.html
+++ b/src/main/resources/templates/fragments/pageHeader.html
@@ -5,7 +5,7 @@
      class="row">
   <div class="col-sm-9"></div>
   <div class="col-sm-1" th:text="${#authentication.principal.username}"></div>
-  <div class="col-sm-2 rounded border">
-    <a class="btn btn-default" href="/login?logout">Вийти із застосунку</a>
+  <div class="col-sm-2">
+    <a class="btn btn-outline-primary" href="/login?logout">Вийти із застосунку</a>
   </div>
 </div>
